.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/dt/.xmonad/build-x86_64-linux -o /home/dt/.xmonad/xmonad-x86_64-linux

xmonad.hs:110:17: error: Variable not in scope: colorBack :: String
    |
110 | myNormColor   = colorBack   -- This variable is imported from Colors.THEME
    |                 ^^^^^^^^^

xmonad.hs:113:17: error: Variable not in scope: color15 :: String
    |
113 | myFocusColor  = color15     -- This variable is imported from Colors.THEME
    |                 ^^^^^^^

xmonad.hs:134:63: error:
    Variable not in scope: colorScheme :: [Char]
    |
134 |   spawn ("sleep 2 && conky -c $HOME/.config/conky/xmonad/" ++ colorScheme ++ "-01.conkyrc")
    |                                                               ^^^^^^^^^^^

xmonad.hs:135:188: error:
    Variable not in scope: colorTrayer :: [Char]
    |
135 |   spawn ("sleep 2 && trayer --edge top --align right --widthtype request --padding 6 --SetDockType true --SetPartialStrut true --expand true --monitor 1 --transparent true --alpha 0 " ++ colorTrayer ++ " --height 22")
    |                                                                                                                                                                                            ^^^^^^^^^^^

xmonad.hs:405:42: error: Variable not in scope: color15 :: String
    |
405 |                  , activeColor         = color15
    |                                          ^^^^^^^

xmonad.hs:406:42: error: Variable not in scope: color08 :: String
    |
406 |                  , inactiveColor       = color08
    |                                          ^^^^^^^

xmonad.hs:407:42: error: Variable not in scope: color15 :: String
    |
407 |                  , activeBorderColor   = color15
    |                                          ^^^^^^^

xmonad.hs:408:42: error: Variable not in scope: colorBack :: String
    |
408 |                  , inactiveBorderColor = colorBack
    |                                          ^^^^^^^^^

xmonad.hs:409:42: error: Variable not in scope: colorBack :: String
    |
409 |                  , activeTextColor     = colorBack
    |                                          ^^^^^^^^^

xmonad.hs:410:42: error: Variable not in scope: color16 :: String
    |
410 |                  , inactiveTextColor   = color16
    |                                          ^^^^^^^

xmonad.hs:700:64: error:
    Variable not in scope: colorScheme :: [Char]
    |
700 |   xmproc0 <- spawnPipe ("xmobar -x 0 $HOME/.config/xmobar/" ++ colorScheme ++ "-xmobarrc")
    |                                                                ^^^^^^^^^^^

xmonad.hs:701:64: error:
    Variable not in scope: colorScheme :: [Char]
    |
701 |   xmproc1 <- spawnPipe ("xmobar -x 1 $HOME/.config/xmobar/" ++ colorScheme ++ "-xmobarrc")
    |                                                                ^^^^^^^^^^^

xmonad.hs:702:64: error:
    Variable not in scope: colorScheme :: [Char]
    |
702 |   xmproc2 <- spawnPipe ("xmobar -x 2 $HOME/.config/xmobar/" ++ colorScheme ++ "-xmobarrc")
    |                                                                ^^^^^^^^^^^

xmonad.hs:719:35: error: Variable not in scope: color06 :: String
    |
719 |         , ppCurrent = xmobarColor color06 "" . wrap
    |                                   ^^^^^^^

xmonad.hs:720:66: error: Variable not in scope: color06 :: [Char]
    |
720 |                       ("<box type=Bottom width=2 mb=2 color=" ++ color06 ++ ">") "</box>"
    |                                                                  ^^^^^^^

xmonad.hs:722:35: error: Variable not in scope: color06 :: String
    |
722 |         , ppVisible = xmobarColor color06 "" . clickable
    |                                   ^^^^^^^

xmonad.hs:724:34: error: Variable not in scope: color05 :: String
    |
724 |         , ppHidden = xmobarColor color05 "" . wrap
    |                                  ^^^^^^^

xmonad.hs:725:62: error: Variable not in scope: color05 :: [Char]
    |
725 |                      ("<box type=Top width=2 mt=2 color=" ++ color05 ++ ">") "</box>" . clickable
    |                                                              ^^^^^^^

xmonad.hs:727:43: error: Variable not in scope: color05 :: String
    |
727 |         , ppHiddenNoWindows = xmobarColor color05 ""  . clickable
    |                                           ^^^^^^^

xmonad.hs:729:33: error: Variable not in scope: color16 :: String
    |
729 |         , ppTitle = xmobarColor color16 "" . shorten 60
    |                                 ^^^^^^^

xmonad.hs:731:30: error: Variable not in scope: color09 :: [Char]
    |
731 |         , ppSep =  "<fc=" ++ color09 ++ "> <fn=1>|</fn> </fc>"
    |                              ^^^^^^^

xmonad.hs:733:34: error: Variable not in scope: color02 :: String
    |
733 |         , ppUrgent = xmobarColor color02 "" . wrap "!" "!"
    |                                  ^^^^^^^
